Get talks to render better in mobile

--- a/index-template.html
+++ b/index-template.html
@@ -11,7 +11,7 @@
   <meta name="viewport"
         content="width=device-width, initial-scale=1, user-scalable=no"/>
   <link rel="stylesheet" href="assets/css/main.css"/>
-  <link rel="stylesheet" href="assets/css/custom.css"/>
+  <link rel="stylesheet" href="css/custom.css"/>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <noscript>
     <link rel="stylesheet" href="assets/css/noscript.css"/>
@@ -26,7 +26,7 @@
     <header id="header" class="alt">
       <h1>
         <a href="index.html">
-          <img src="images/logo-white.png" class="phase-logo"/> PHASE
+          <img src="images/logo-white.png" class="phase-logo" alt=""/> PHASE
         </a>
       </h1>
       <nav id="nav">
@@ -76,7 +76,7 @@
     <section id="talks" class="wrapper style1 special">
       <div class="inner">
         <header class="major">
-          <h2>Selected Past Talks</h2>>
+          <h2>Selected Past Talks</h2>
 
 {{talks}}
 
