--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
           <img src="images/logo-white.png" class="phase-logo"/>
           Philly Area Scala Enthusiasts
         </h2>
-        <p>The Philly Area Scala Enthusiasts (PHASE) is a user group for people in the
+        <p>
+          The Philly Area Scala Enthusiasts (PHASE) is a user group for people in the
           Philadelphia, PA, region who are interested in the
           <a target="_blank" href="http://www.scala-lang.org/">Scala</a>
           programming language. If you're interested in Scala, programming on the
@@ -65,7 +66,8 @@
           Scala user groups behind the
           <a target="_blank" href="http://nescala.io">Northeast Scala Symposium</a>.
         </p>
-        <p>For information about our monthly meetings, see the
+        <p>
+          For information about our monthly meetings, see the
           <a target="_blank" href="http://www.meetup.com/scala-phase">PHASE Meetup page</a>.</p>
 
       </div>
