Emphasize full name in yellow.

--- a/index-template.html
+++ b/index-template.html
@@ -10,6 +10,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport"
         content="width=device-width, initial-scale=1, user-scalable=no"/>
+  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
   <link rel="stylesheet" href="assets/css/main.css"/>
   <link rel="stylesheet" href="css/custom.css"/>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -35,7 +36,7 @@
             <a href="#menu" class="menuToggle"><span>Menu</span></a>
             <div id="menu">
               <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="#header">Home</a></li>
                 <li><a href="#talks">Talks</a></li>
               </ul>
             </div>
@@ -49,11 +50,13 @@
       <div class="inner">
         <h2>
           <img src="images/logo-white.png" class="phase-logo"/>
-          Philly Area Scala Enthusiasts
+          PHASE
         </h2>
         <p>
-          The Philly Area Scala Enthusiasts (PHASE) is a user group for people in the
-          Philadelphia, PA, region who are interested in the
+          The
+          <span class="full-name">Philly Area Scala Enthusiasts</span>
+          (PHASE) is a user group for
+          people in the Philadelphia, PA, region who are interested in the
           <a target="_blank" href="http://www.scala-lang.org/">Scala</a>
           programming language. If you're interested in Scala, programming on the
           Java VM, or functional programming in general, feel free to join us.</p>
