--- a/index-template.html
+++ b/index-template.html
@@ -59,8 +59,8 @@
           people in the Philadelphia, PA, region who are interested in the
           <a target="_blank" href="http://www.scala-lang.org/">Scala</a>
           programming language. If you're interested in Scala, programming on the
-          Java VM, or functional programming in general, feel free to join us.</p>
-
+          JVM, or functional programming in general, feel free to join us.
+        </p>
         <p>
           PHASE tries to meet monthly, with meeting locations alternating between
           Center City Philadelphia and the suburbs. In addition, PHASE is actively
