Renamed location of Scala Fundamentals. Still trying to get GH Pages to generate it properly.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <ul>
                 <li><a href="#header">Home</a></li>
                 <li><a href="#talks">Talks</a></li>
-                <li><a href="scala-fundamentals/index.html">Scala Fundamentals</a></li>
+                <li><a href="fundamentals/">Scala Fundamentals</a></li>
               </ul>
             </div>
           </li>
@@ -76,7 +76,7 @@
         </p>
         <p>
           If you're looking for the materials from our Scala Fundamentals
-          Workshop, they're <a href="scala-fundamentals/index.html">here</a>.
+          Workshop, they're <a href="fundamentals/">here</a>.
         </p>
 
       </div>
