Shortened content in intro section, to avoid having Talks link step on it.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section id="banner">
       <div class="inner">
         <h2>
-          <img src="images/logo-white.png" class="phase-logo"/>
+          <img src="images/logo-white.png" class="phase-logo" alt="logo"/>
           PHASE
         </h2>
         <p>
@@ -60,23 +60,18 @@
           people in the Philadelphia, PA, region who are interested in the
           <a target="_blank" href="http://www.scala-lang.org/">Scala</a>
           programming language. If you're interested in Scala, programming on the
-          JVM, or functional programming in general, feel free to join us.
+          JVM, or functional programming in general, join us.
         </p>
         <p>
           PHASE tries to meet monthly, with meeting locations alternating between
-          Center City Philadelphia and the suburbs. In addition, PHASE is actively
-          involved in organizing conferences and collaborating with other
-          Philadelphia-area technology users groups. PHASE is one of three regional
-          Scala user groups behind the
-          <a target="_blank" href="http://nescala.io">Northeast Scala Symposium</a>.
-        </p>
-        <p>
-          For information about our monthly meetings, see the
+          Center City Philadelphia and the suburbs. For information about our
+          monthly meetings, see the
           <a target="_blank" href="http://www.meetup.com/scala-phase">PHASE Meetup page</a>.
-        </p>
-        <p>
-          If you're looking for the materials from our Scala Fundamentals
-          Workshop, they're <a href="fundamentals/">here</a>.
+          In addition, PHASE is actively
+          involved in organizing conferences and collaborating with other
+          technology user groups. PHASE is one of three regional Scala groups
+          behind the
+          <a target="_blank" href="http://nescala.io">Northeast Scala Symposium</a>.
         </p>
 
       </div>
