Changed link to source code repo.

--- a/index.html
+++ b/index.html
@@ -728,8 +728,8 @@
     <footer id="footer">
       <p>
       The source for the site is currently at
-      <a target="_blank" href="https://github.com/scala-phase/scala-phase">
-        github.com/scala-phase/scala-phase
+      <a target="_blank" href="https://github.com/scala-phase/scala-phase.github.io">
+        github.com/scala-phase/scala-phase.github.io
       </a>.
       It uses HTML design templates from
       <a href="https://pixelarity.com" target="_blank">Pixelarity</a>.
