Another layout change to render better in landscope mode on mobile devices.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="#menu" class="menuToggle"><span>Menu</span></a>
             <div id="menu">
               <ul>
-                <li><a href="#header">Home</a></li>
+                <li><a href="#banner">Home</a></li>
                 <li><a href="#talks">Talks</a></li>
                 <li><a href="fundamentals/">Scala Fundamentals</a></li>
               </ul>
@@ -62,31 +62,48 @@
           programming language. If you're interested in Scala, programming on the
           JVM, or functional programming in general, join us.
         </p>
+
+      </div>
+      <a href="#more-info" class="more scrolly">More</a>
+    </section>
+
+    <section id="more-info" class="wrapper style1 special">
+      <div class="inner">
+        <h2>
+          The Gory Details
+        </h2>
         <p>
           PHASE tries to meet monthly, with meeting locations alternating between
           Center City Philadelphia and the suburbs. For information about our
           monthly meetings, see the
           <a target="_blank" href="http://www.meetup.com/scala-phase">PHASE Meetup page</a>.
-          In addition, PHASE is actively
-          involved in organizing conferences and collaborating with other
-          technology user groups. PHASE is one of three regional Scala groups
+        </p>
+        <p>
+          We welcome all kinds of talks at all levels. We welcome anyone
+          who wants to speak, from rank beginner to speaking veteran. We don't
+          care who you are: If you're excited to talk about something, we're
+          excited to hear you.
+        </p>
+        <p>
+          PHASE organizers are actively involved in organizing conferences
+          and collaborating with other technology user groups. We're especially
+          interested in boosting technology in the Philadelphia area. After all,
+          this is where we live. PHASE is one of three regional Scala groups
           behind the
           <a target="_blank" href="http://nescala.io">Northeast Scala Symposium</a>.
         </p>
-
       </div>
-      <a href="#talks" class="more scrolly">Talks</a>
     </section>
 
-    <!-- One -->
-    <section id="talks" class="wrapper style1 special">
+    <!-- Talk -->
+    <section id="talks" class="wrapper alt style2">
       <div class="inner">
         <header class="major">
           <h2>Selected Past Talks</h2>
 
 <!-- @start talks@ -->
 <!-- DO NOT EDIT THIS BLOCK. It's added automatically. -->
-<div>
+<div id="talk-block">
     <div class="talk">
       <div class="title">Intro to Apache Spark with Frameless</div>
       <div class="speaker">Brian Clapper</div>
@@ -724,17 +741,6 @@
         </header>
       </div>
     </section>
-
-    <footer id="footer">
-      <p>
-      The source for the site is currently at
-      <a target="_blank" href="https://github.com/scala-phase/scala-phase.github.io">
-        github.com/scala-phase/scala-phase.github.io
-      </a>.
-      It uses HTML design templates from
-      <a href="https://pixelarity.com" target="_blank">Pixelarity</a>.
-      </p>
-    </footer>
 
   </div>
 
