Added link to source for the site

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                 <li><a href="#banner">Home</a></li>
                 <li><a href="#talks">Talks</a></li>
                 <li><a href="fundamentals/">Scala Fundamentals</a></li>
+                <li>
+                  <a target="_blank" href="https://github.com/scala-phase/scala-phase.github.io">
+                    <i class="fab fa-github"></i> Source for this site
+                  </a>
+                </li>
               </ul>
             </div>
           </li>
