--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
           <a target="_blank" href="http://www.meetup.com/scala-phase">PHASE Meetup page</a>.
         </p>
         <p>
-          We welcome all kinds of talks at all levels. We welcome anyone
-          who wants to speak, from rank beginner to speaking veteran. We don't
-          care who you are: If you're excited to talk about something, we're
-          excited to hear you.
+          We welcome all kinds of <a href="#talks">talks</a> at all levels.
+          We welcome anyone who wants to speak, from rank beginner to speaking
+          veteran. We don't care who you are: If you're excited to talk about
+          something, we're excited to hear you.
         </p>
         <p>
           PHASE organizers are actively involved in organizing conferences
