We welcome first-time speakers

--- a/index.html
+++ b/index.html
@@ -90,6 +90,20 @@
           something, we're excited to hear you.
         </p>
         <p>
+          We <i>especially</i> welcome new speakers! If you've never spoken
+          before, do your first talk with us. Talk about anything. Tell us
+          your experiences (good and bad) trying to learn Scala. Talk about
+          the legacy system at your job. Educate us on the wonders of Rust
+          (or whatever your favorite <i>other</i> language is). And if the
+          idea of speaking for the first time makes you nervous, leave a
+          message for us on our
+          <a href="https://www.meetup.com/scala-phase" target="_blank">
+            Meetup page
+          </a>,
+          and one of our veteran speakers will help you get started and coach
+          you through your first talk.
+        </p>
+        <p>
           PHASE organizers are actively involved in organizing conferences
           and collaborating with other technology user groups. We're especially
           interested in boosting technology in the Philadelphia area. After all,
