Added Twitter link

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
               <ul>
                 <li><a href="#banner">Home</a></li>
                 <li><a href="#talks">Talks</a></li>
+                <li>
+                  <a href="https://twitter.com/PhillyScala" target="_blank">
+                    <i class="fab fa-twitter"></i> @PhillyScala
+                  </a>
+                </li>
                 <li><a href="fundamentals/">Scala Fundamentals</a></li>
                 <li>
                   <a target="_blank" href="https://github.com/scala-phase/scala-phase.github.io">
@@ -67,7 +72,12 @@
           programming language. If you're interested in Scala, programming on the
           JVM, or functional programming in general, join us.
         </p>
-
+        <p>
+          Follow us on <i class="fab fa-twitter"></i>:
+          <a href="https://twitter.com/PhillyScala" target="_blank">
+            @PhillyScala
+          </a>
+        </p>
       </div>
       <a href="#more-info" class="more scrolly">More</a>
     </section>
