Added Rúnar's talk

--- a/index.html
+++ b/index.html
@@ -134,6 +134,25 @@
 <!-- DO NOT EDIT THIS BLOCK. It's added automatically. -->
 <div id="talk-block">
     <div class="talk">
+      <div class="title">Unison</div>
+      <div class="speaker">Rúnar Bjarnason</div>
+      <div class="date">2021-01-27</div>
+      <div class="details">
+        <ul>
+          <li class="meetup-link">
+            <a target="_blank" href="https://www.meetup.com/scala-phase/events/275889801/">
+              <i class="fab fa-meetup"></i> Meeting link
+            </a>
+          </li>
+          <li>
+            <a target="_blank" class="video-link" href="https://youtu.be/TZZlt6-bKW8">
+              <i class="fas fa-video"></i> Video
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="talk">
       <div class="title">Intro to Apache Spark with Frameless</div>
       <div class="speaker">Brian Clapper</div>
       <div class="date">2018-12-06</div>
