Added Dean Wampler's talk

--- a/index.html
+++ b/index.html
@@ -134,6 +134,30 @@
 <!-- DO NOT EDIT THIS BLOCK. It's added automatically. -->
 <div id="talk-block">
     <div class="talk">
+      <div class="title">What&#39;s New in Scala 3?</div>
+      <div class="speaker">Dean Wampler</div>
+      <div class="date">2021-04-21</div>
+      <div class="details">
+        <ul>
+          <li class="meetup-link">
+            <a target="_blank" href="https://www.meetup.com/scala-phase/events/277164777/">
+              <i class="fab fa-meetup"></i> Meeting link
+            </a>
+          </li>
+          <li class="slides">
+            <a target="_blank" class="slides-link" href="https://deanwampler.github.io/scala3-highlights.html">
+              <i class="fas fa-desktop"></i> Slides
+            </a>
+          </li>
+          <li>
+            <a target="_blank" class="video-link" href="https://www.youtube.com/watch?v=-sGuwQs6lHE">
+              <i class="fas fa-video"></i> Video
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="talk">
       <div class="title">Introduction to Cats Effect</div>
       <div class="speaker">Adam Rosien</div>
       <div class="date">2021-03-24</div>
