Meeting link -> Event page

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/277164777/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="slides">
@@ -165,7 +165,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/276052376/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li>
@@ -184,7 +184,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/275889960/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li>
@@ -203,7 +203,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/275889801/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li>
@@ -222,7 +222,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/256236416/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="code">
@@ -246,7 +246,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/252599833/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="code">
@@ -265,7 +265,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/250916486/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="code">
@@ -289,7 +289,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/245651753/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="slides">
@@ -308,7 +308,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/242031802/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="slides">
@@ -332,7 +332,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/239959892/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="slides">
@@ -356,7 +356,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/234569159/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="slides">
@@ -380,7 +380,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/231545055/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="code">
@@ -399,7 +399,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/229870987/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="slides">
@@ -428,7 +428,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/229719231/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="slides">
@@ -452,7 +452,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="http://www.meetup.com/scala-phase/events/224774883/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="slides">
@@ -476,7 +476,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="http://www.meetup.com/scala-phase/events/221842395/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="slides">
@@ -500,7 +500,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="http://www.meetup.com/scala-phase/events/221076940/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="slides">
@@ -524,7 +524,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/218821822/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="code">
@@ -543,7 +543,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/200903832/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="slides">
@@ -567,7 +567,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/196933482/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="code">
@@ -586,7 +586,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/179613752/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="slides">
@@ -605,7 +605,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/179229002/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="code">
@@ -624,7 +624,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/167166322/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="slides">
@@ -672,7 +672,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/125411192/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="slides">
@@ -691,7 +691,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/112878592/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
         </ul>
@@ -705,7 +705,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/88673682/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="slides">
@@ -724,7 +724,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/85382662/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="slides">
@@ -743,7 +743,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="http://www.meetup.com/scala-phase/events/47857352/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="slides">
@@ -767,7 +767,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="http://www.meetup.com/scala-phase/events/39391912/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li>
@@ -786,7 +786,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="http://www.meetup.com/scala-phase/events/31595792/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="slides">
@@ -805,7 +805,7 @@
         <ul>
           <li class="meetup-link">
             <a target="_blank" href="https://www.meetup.com/scala-phase/events/26666971/">
-              <i class="fab fa-meetup"></i> Meeting link
+              <i class="fab fa-meetup"></i> Event page
             </a>
           </li>
           <li class="slides">
